--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: GavinDraper.com
+title: Gavin Draper's Blog and Code Related Ramblings
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Father, Developer, Extreme Sports Enthusiast
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gavindraper.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gavdraper
