configure perma link

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gavindraper.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gavdraper
 github_username:  gavdraper
+permalink: /:year/:month/:day/:title.html
 highlighter: rouge
 # Build settings
 markdown: kramdown
