--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ permalink: /:year/:month/:day/:title/
 highlighter: rouge
 # Build settings
 markdown: kramdown
-theme: minima
+theme: gavcustom
 gems:
   - jekyll-feed
 exclude:
