--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gavin Draper's SQL Blog and Related Ramblings
+title: Gavin Draper's SQL Server Blog and Related Ramblings
 description: > # this means to ignore newlines until "baseurl:"
-  Father, Developer, Extreme Sports Enthusiast
+  Father, Developer, DBA, Extreme Sports Enthusiast
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gavindraper.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gavdraper
