--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gavin Draper's SQL Server Blog and Related Ramblings
-name: Gavin Draper's SQL Server Blog and Related Ramblings
+title: Gavin Draper - SQL Server Blog and Related Ramblings
+name: Gavin Draper - SQL Server Blog and Related Ramblings
 description: > # this means to ignore newlines until "baseurl:"
   Father, Developer, DBA, Extreme Sports Enthusiast
 baseurl: "" # the subpath of your site, e.g. /blog
