--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ menu_settings:
     - title: "Blog"
       url: "/"
     - title: "Projects"
-      url: "/projects/"
+      url: "/project/"
     - title: "About"
       url: "/about"
     - title: "Contact"
