--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ header_settings:
 
 menu_settings:
   menu_items:
-    - title: "Blog"
+    - title: "Articles"
       url: "/"
     - title: "Projects"
       url: "/project/"
